@@ -1,3 +1,14 @@
+2007-04-02  Tom Tromey  <tromey@redhat.com>
+
+	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=233406
+	* gnu/java/net/natPlainSocketImplPosix.cc (create): Return if
+	already created.
+	* gnu/java/net/PlainSocketImpl.java (getLocalAddress): Handle case
+	where localport is -1.
+	(create): Now public.
+	* gnu/java/nio/SocketChannelImpl.java (SocketChannelImpl): Call
+	'create' on the socket.
+
 2007-04-02  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/reflect/natVMProxy.cc (run_proxy): Use
